--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
                 <link rel="stylesheet"
                         href="./css/style.css">
 
-                <title>Which is wealthier?</title>
+                <title>근린 경관 평가 크라우드소싱 플랫폼</title>
                 <script src="./js/init.js"></script>
         </head>
 
 
         <body>
                 <div id='title'>
-                        <p>Which is wealthier?</p>
+                        <p>어느 골목 사진이 더 안전해 보이나요?</p>
                 </div>
 
                 <div id='images'></div>
@@ -20,12 +20,12 @@
 
                 <form id="form">
                         <div id='textes'>
-                            <input type="radio" name="yn" value="left" checked="true"> Left
-                            <input type="radio" name="yn" value="right"> Right
-                            <input type="radio" name="yn" value="none"> none/both
+                            <input type="radio" name="yn" value="left" checked="true"> 왼쪽
+                            <input type="radio" name="yn" value="right"> 오른쪽
+                            <input type="radio" name="yn" value="none"> 선택하기 어려움
                         </div>
 
-                    <p id='pSubmit'><button id='goback' type="button">Go Back</button><br><input type="submit" id="submitBtn" value="Validate"></p>
+                    <p id='pSubmit'><button id='goback' type="button">뒤로</button><br><input type="submit" id="submitBtn" value="Validate"></p>
                 </form>
         </body>
 
