--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
                 <title>근린 경관 평가 크라우드소싱 플랫폼</title>
                 <script src="./js/init.js"></script>
+                <base href="/" />
         </head>
 
 
