--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <input type="radio" name="yn" value="none"> 선택하기 어려움
                         </div>
 
-                    <p id='pSubmit'><button id='goback' type="button">뒤로</button><br><br><br><br><input type="submit" id="submitBtn" value=""></p>
+                    <p id='pSubmit'><button id='goback' type="button">뒤로</button><br><br><br><br><input type="submit" id="submitBtn" value="Validate"></p>
                 </form>
         </body>
 
